# Music_Player

./: Bottom_Bar.qml  CMakeLists.txt  File_List.qml  Image_Button.qml  Main.qml  PlaylistView.qml  Side_Bar.qml  audioplayer.cpp  audioplayer.h  main.cpp
